ghc-4335c07/testsuite/tests/codeGen/should_fail/T8131.cmm
#include "Cmm.h"

testMemcpy (W_ dst, W_ src, W_ l, W_ sz)
{
  prim %memcpy(dst, src, l, sz);
  return ();
}
